Create kitara shop solution endpoint
